test/errors/type_names_error/zs/clashing_type_names_within_package_error.zs
package clashing_type_names_within_package_error;

struct Test
{
    uint8 field;
};

union TEst
{
    uint8 field8;
    uint16 field16;
};
